[add]custom_colorの追加(#46)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,20 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-base: #f3c623;
+  --color-bese_light: #f7de88;
+  --color-main: #3c486b;
+  --color-secondly: #fcf6ee;
+  --color-thirdly: #d0104c;
+  --color-font: #111111;
+  --color-map_pin1: #d33726;
+  --color-crowded: #f67173;
+  --color-slightly_crowded: #f6d831;
+  --color-not_crowded: #95f349;
+  --color-after_hours: #bbb8b8;
+  --color-crowded_marker: #ff4145;
+  --color-required: #f95a3e;
 }
 
 @media (prefers-color-scheme: dark) {
