--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -39,10 +41,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&family=Zen+Kaku+Gothic+New&display=swap');
-@import "tailwindcss";
-
 @theme {
-  --font-title: "Yuji+Syuku", sans-serif;
+  --font-title: "Yuji Syuku", sans-serif;
+  --font-main_text: "Zen Kaku Gothic New", sans-serif;
 }
