--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -28,6 +26,15 @@
   --color-required: #f95a3e;
 }
 
+.shadow-light {
+  /* 明るい色ベース、わずかな黒い影を加えて立体感を出す */
+  box-shadow: var(--shadow-color-light) !important;
+}
+
+.shadow-secondly {
+  box-shadow: var(--shadow-color-secondly) !important;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -41,7 +48,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@theme {
-  --font-title: "Yuji Syuku", sans-serif;
+:root {
+  --font-title: "Yuji Syuku", serif;
   --font-main_text: "Zen Kaku Gothic New", sans-serif;
+}
+
+.font-title {
+  font-family: var(--font-title) !important;
+}
+
+.font-main_text {
+  font-family: var(--font-main_text) !important;
 }
